--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,24 @@
+/* -----------general---------- */
 *{
     margin:0px;
     padding:0 5px;
     box-sizing: border-box;
+    
+  }
+  body{
+    background-color: #FAFAFA;
   }
   
 *::after,::before {
     margin: 0;
     padding: 0; 
 }
+
+.typesize{
+  font-size: 28px;
+}
+
+/* -------------------------header----------------- */
 
 .header{
   display: flex;
@@ -23,6 +34,12 @@
   padding: 10px 15px;
 }
 
+.btn{
+  padding: 10px 5px;
+  border-color: black;
+}
+
+/* -----------------------------top--------------------- */
 
 .toptype{
  background-image: url(./images/bg1.jpeg);
@@ -57,16 +74,95 @@
   padding-bottom: 30px;
 }
 
-.type{
-  padding: 20px;
-}
+/* -----------------------middle---------------------------- */
+
+ 
 
 .middle{
+  padding:0 50px;
+}
+
+.middle-content{
  display: flex;
+ gap: 30px;
+ padding: 30px 0;
  justify-content: space-around;
  align-items: center;
  font-size: 18px;
 
+}
+
+
+.middle1{
+  background-image: url(./images/middle1.svg);
+  display: flex;
+  justify-content: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 50%;
+  align-items: center;
+  background-position: center;
+  background-repeat: no-repeat; 
+}
+
+ .m1{
+  padding-left: 200px;
+  padding-top: 70px;
+ 
+}
+
+.middle3{
+  display: flex;
+  justify-content: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 50%; 
+  padding-right: 350px;
+  background-image: url(./images/middle2.svg);
+}
+.md2{
+  
+ object-fit: contain; 
+ width: 100%; 
+}
+
+.md3{ 
+  padding-top: 60px;
+  padding-left: 300px;
+  display: flex; 
+  align-items: center;
+ object-fit: contain;
+ 
+} 
+
+/* ------------------------feature------------------ */
+
+.aosfeatures{
+  padding: 20px;
+  text-align: center;
+  background-color: #FAFAFA;
+}
+
+.feature{
+  display: grid;
+  grid-template-columns: 1fr 1fr  1fr 1fr;
+  grid-template-rows: 1fr 1fr,;
+  gap:20px;
+  padding: 30px;
+}
+
+.feature-content{
+  /* display:flex ; */
+  border-radius: 6px;
+  box-sizing: border-box;
+  padding: 15px;
+  margin: 20px;
+  background-color: white;
+  
+}
+
+.type{
+  padding: 20px;
 }
 
 .middledown{
@@ -89,69 +185,7 @@
   text-align: left;
   
 }
-.middle1{
-  background-image: url(./images/middle1.svg);
-  display: flex;
-  justify-content: center;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 50%;
-  align-items: center;
-  /* background-position: center;
-  background-repeat: no-repeat; */
-}
 
-.m1{
-  padding-left: 200px;
-  padding-top: 70px;
- 
-}
-
-.middle3{
-  display: flex;
-  justify-content: center;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 50%;
-  /* padding-right: 350px; */
-  background-image: url(./images/middle2.svg);
-}
-.md2{
-  
- object-fit: contain;
- /* width: 100%; */
-}
-
-.md3{
-  /* padding-top: 60px;
-  padding-left: 300px;
-  display: flex; */
-  align-items: center;
- object-fit: contain;
- 
-}
-
-
-
-.aosfeatures{
-  padding: 20px;
-  text-align: center;
-  background-color: #FAFAFA;
-}
-
-.features{
-  display: flex;
-  justify-content: space-around;
-  padding: 30px;
-}
-
-.features-content{
-  border-radius: 6px;
-  box-sizing: border-box;
-  padding: 15px;
-  background-color: white;
-  
-}
 /* .subscribe{
   padding: 20px;
 
@@ -216,12 +250,7 @@ justify-content: space-between;
   color: black;
 }
 
-.button{
-  border-radius: 1px;
-  padding:5px 10px;
-  border-style: solid;
- 
-}
+
 
 .buttonGreen{
   border-radius: 5px;
