--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* -----------general---------- */
 *{
     margin:0px;
-    padding:0 5px;
+    /* padding:0 5px; */
     box-sizing: border-box;
     
   }
@@ -37,6 +37,14 @@
 .btn{
   padding: 10px 5px;
   border-color: black;
+  border-radius: 5px;
+}
+
+.green{
+  background-color: #48A928;
+  border-style: none;
+  color: white;
+  
 }
 
 /* -----------------------------top--------------------- */
@@ -45,11 +53,12 @@
  background-image: url(./images/bg1.jpeg);
  background-position: center;
  background-repeat: no-repeat;
+ width: 100%;
+ 
 }
 
 .innertop{
   padding: 10px;
-  /* background-color: white; */
   text-align: center;
 }
 
@@ -93,54 +102,14 @@
 }
 
 
-.middle1{
-  background-image: url(./images/middle1.svg);
-  display: flex;
-  justify-content: center;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 50%;
-  align-items: center;
-  background-position: center;
-  background-repeat: no-repeat; 
-}
 
- .m1{
-  padding-left: 200px;
-  padding-top: 70px;
- 
-}
 
-.middle3{
-  display: flex;
-  justify-content: center;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 50%; 
-  padding-right: 350px;
-  background-image: url(./images/middle2.svg);
-}
-.md2{
-  
- object-fit: contain; 
- width: 100%; 
-}
-
-.md3{ 
-  padding-top: 60px;
-  padding-left: 300px;
-  display: flex; 
-  align-items: center;
- object-fit: contain;
- 
-} 
 
 /* ------------------------feature------------------ */
 
 .aosfeatures{
   padding: 20px;
   text-align: center;
-  background-color: #FAFAFA;
 }
 
 .feature{
@@ -152,7 +121,6 @@
 }
 
 .feature-content{
-  /* display:flex ; */
   border-radius: 6px;
   box-sizing: border-box;
   padding: 15px;
@@ -160,6 +128,14 @@
   background-color: white;
   
 }
+
+.middle-img{
+  padding: 60px;
+}
+
+
+
+/*-------------------------------middle-down------------------------------ */
 
 .type{
   padding: 20px;
@@ -174,7 +150,7 @@
  }
  .middledowntext{
   padding-top: 80px;
-  font-size: 12px;
+  font-size: 16px;
  }
 
  .middledownn{
@@ -186,15 +162,7 @@
   
 }
 
-/* .subscribe{
-  padding: 20px;
 
-} */
-
-/* .subtype{
-  padding:0 5px;
-
-} */
 
 .foot{
   display: flex;
