--- a/src/App.css
+++ b/src/App.css
@@ -200,7 +200,11 @@ ul{
 }
 
 .listed{
-  padding: 20px;
+  padding-left: 20px;
+}
+
+.list-heading{
+  padding-left: 0px;
 }
 
 .info{
@@ -227,6 +231,10 @@ justify-content: space-between;
 }
 
 .icon{
-  height: 20px;
+  height: 50px;
   display:flex;
+}
+
+.icon-type{
+  font-size: 14px;
 }
